deploy/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pigeonbox
  namespace: pigeonbox
spec:
  selector:
    app: pigeonbox
  ports:
    - name: http
      port: 12345
      targetPort: http
      protocol: TCP
  type: ClusterIP
